| 2025-03-09 | 新增LogViewer并支持日志文件名匹配和日志内容查找